// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelView Component should have a fallback title: title 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Subscription Watch"
    />
  </PageHeader>
  <PageSection>
    <Connect(RhelGraphCard)
      key="lorem ipsum"
      productId="lorem ipsum"
    />
  </PageSection>
</Fragment>
`;

exports[`RhelView Component should render a non-connected component: non-connected 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Dolor sit"
    />
  </PageHeader>
  <PageSection>
    <Connect(RhelGraphCard)
      key="lorem ipsum"
      productId="lorem ipsum"
    />
  </PageSection>
</Fragment>
`;
